# slow5curl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  SECURITY.md  outfile  setup.py  slow5curl
.github/workflows/: c-cpp.yml  release-simulation.yml  release.yml
docs/: commands.md  dev.md  index.md  oneliners.md  workflows.md
docs/slow5curl_api/: s5curl_close.md  s5curl_close_conns.md  s5curl_conn_cleanup.md  s5curl_conn_init.md  s5curl_free_mt.md  s5curl_get.md  s5curl_get_batch.md  s5curl_global_cleanup.md  s5curl_global_init.md  s5curl_idx_load.md  s5curl_idx_load_with.md  s5curl_idx_unload.md  s5curl_init_mt.md  s5curl_multi_close.md  s5curl_multi_open.md  s5curl_open.md  s5curl_open_conns.md  slow5curl.md
examples/: README.md  build.sh  get_multi_read.c  get_single_read.c  with_custom_local_index.c  with_custom_remote_index.c  with_local_index.c
examples/data/: reads_10_lossy.blow5  reads_10_lossy.blow5.idx
include/slow5curl/: s5curl.h  s5curl_defs.h
python/: .gitignore  pys5curl.h  pys5curl.pxd  pys5curl.pyx
scripts/: benchmark.sh  build.sh  configure.sh  gdown.sh  run.sh  test_new_build.sh
src/: conns.h  curlget.c  error.h  fetch.c  fetch.h  get.c  index.c  index.h  main.c  mt.c  s5curl.c  slow5_wget.c  slow5_wget.h
src/s5curl/: fetch.c  fetch.h  get.c  index.c  index.h  read.c  s5curl.c  s5curl.h
src/s5wget/: fetch.c  fetch.h  s5wget.c  s5wget.h
src/slow5_wget/: fetch.c  fetch.h  slow5.h  slow5_wget.c  slow5_wget.h
src_tool/: LICENSE  cmd.h  error.h  get.c  head.c  main.c  misc.c  misc.h  reads.c  thread.c  thread.h
test/: example.blow5  example.exp  extensive.sh  test.sh  test_extensive.sh
test/bench/: basecall.sh  table_results.sh  thread.sh  wasabi_fetch.sh
test/data/exp/: head.txt  press_none.blow5  press_zlib.blow5  reads_1.slow5  reads_10.blow5  reads_10.txt  reads_1_lossy.blow5  sig_none.blow5
test/data/raw/: PGXX22394_hundred_gene_readid.list  PGXX22394_one_gene_readid.list  hundred_gene.random.hg38.bed  reads_10.slow5  reads_10.slow5.idx  reads_100.txt
